<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#454A53"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="#1877A3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textColor="#E6E6E6"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="16sp"
            android:background="#E4E4E4"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingTop="10sp"
            android:paddingRight="10sp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title2"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtField_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="30"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txtField_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/surname_hint"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="30"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="fill|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="14dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/genre"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spn_genre"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#DDDDDD"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/spinnerItems"
                    android:prompt="@string/spin"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="265dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/birth"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/date_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/question"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup_lenguajes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checkedButton="@id/radioButton_yes"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton_yes"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/si" />

                    <RadioButton
                        android:id="@+id/radioButton_no"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:text="@string/no" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_lenguaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:focusable="true"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/lang"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layout_checkboxesLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkBox_java"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/java" />

                        <CheckBox
                            android:id="@+id/checkBox_js"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/js" />

                        <CheckBox
                            android:id="@+id/checkBox_ccpp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/c_c" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="97dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkBox_python"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/python" />

                        <CheckBox
                            android:id="@+id/checkBox_goland"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/go_land" />

                        <CheckBox
                            android:id="@+id/checkBox_cshp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/c" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30sp"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="30sp"
                        android:layout_weight="1"
                        android:onClick="sendInfo"
                        android:text="@string/enviar" />

                    <Button
                        android:id="@+id/btn_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15sp"
                        android:layout_weight="1"
                        android:text="@string/limpiar" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/rights"
            android:textColor="#000000" />

    </LinearLayout>

</ScrollView>