<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#454A53"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="#1877A3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textColor="#E6E6E6"
                android:textSize="30sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16sp"
            android:background="#E4E4E4"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <LinearLayout
                android:id="@+id/layout_success"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="10sp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C4CFE6"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginBottom="15sp"
                        android:text="@string/response"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:text="@string/detailed_info"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtView_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:layout_marginBottom="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/thankyou"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="140sp"
                    android:gravity="bottom|center"
                    android:orientation="vertical"
                    android:paddingLeft="50sp"
                    android:paddingRight="50sp"
                    android:paddingBottom="10sp">

                    <Button
                        android:id="@+id/btn_newForm"
                        android:layout_width="wrap_content"
                        android:layout_height="63dp"
                        android:drawableEnd="@android:drawable/ic_menu_add"
                        android:onClick="nuevoForm"
                        android:text="@string/nuevo_formulario"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/rights"
            android:textColor="#000000" />

    </LinearLayout>
</ScrollView>